# ccchat

./: .gitignore  Cargo.toml  README.md  USER_MANUAL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: audit.rs  background.rs  commands.rs  error.rs  guard.rs  helpers.rs  main.rs  queue.rs  schedule.rs  signal.rs  state.rs  stats.rs  traits.rs  webhook.rs
src/commands/: admin.rs  memory_cmds.rs  mod.rs  scheduling.rs  tests.rs
src/memory/: admin.rs  config.rs  context.rs  messages.rs  mod.rs  schema.rs
