[package]
name = "ccchat"
version = "0.1.5"
edition = "2021"
description = "Chat with Claude AI from your favourite messenger"
license = "MIT"
repository = "https://github.com/h4x0r/ccchat"
keywords = ["claude", "chatbot", "signal", "messaging", "ai"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
futures-util = "0.3"
